# fastzdp_login

./: .gitignore  README.md  pyproject.toml
examples/c01_official/: c01_basic.py
examples/c02_teach_20240925/: c01_login_register.py  c02_send_code.py  c03_send_code.py  c04_phone_login.py  init_db.py
fastzdp_login/: __init__.py  jwt_util.py  passlib_util.py  user_model.py  user_router.py  user_schema.py
