[tool.poetry]
name = "fastzdp-login"
version = "0.1.5"
description = "专为Fast API打造的用户登录注册相关功能的微代码框架"
authors = ["zhangdapeng"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
passlib = "^1.7.4"
pyjwt = "^2.8.0"
fastzdp-api = "^0.1.5"
fastzdp-redis = "^0.1.0"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
